--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@
       <div class="red-panda">
          <picture> 
           <source media="(max-width: 600px)" srcset="redpanda600.jpg">
-          <source media="(min-width: 1200px)" srcset="redpanda1200.jpg">
+          <source media="(min-width: 601px)" srcset="redpanda1200.jpg">
           <img src="originals/redpanda1200.jpg" alt="Red panda sitting on a branch">
          </picture>          
       </div>
 
     </main>
   </body>
-</html>originals
+</html>
+
