--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         
       <div class="red-panda">
          <picture> 
-          <source media="(max-width: 600px)" srcset="redpanda600.jpg">
-          <source media="(min-width: 601px)" srcset="redpanda1200.jpg">
+          <source media="(max-width: 600px)" srcset="redpanda600.jpg"
+          srcset="redpanda1200.jpg">
           <img src="originals/redpanda1200.jpg" alt="Red panda sitting on a branch">
          </picture>          
       </div>
