--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <main>
       <article>
-        <iframe width="400" height="215" src="https://www.youtube.com/embed/ojcNcvb1olg" frameborder="0"; encrypted-media" allowfullscreen></iframe>
+        <iframe width="400" height="215" src="https://www.youtube.com/embed/ojcNcvb1olg" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
 
         <h2>Rocking the free web</h2>
 
