--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@
        
       <div class="further-info">       
          <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img srcset="firefoxlogo120.png 120w
-                       firefoxlogo400.png 400w"
+          <img srcset="originals/firefoxlogo120.png 120w,
+                       originals/firefoxlogo400.png 400w"
                sizes="(max-width: 480px) 120px
                       400px"
                src="originals/firefoxlogo400.png" alt="Red panda running after its tale">
          </a>
          <a href="https://www.mozilla.org/">
-          <img srcset="mozilladinosaur120.png 120w
-                       mozilladinosaur400.png 400w"
+          <img srcset="originals/mozilladinosaur120.png 120w,
+                       originals/mozilladinosaur400.png 400w"
                sizes="(max-width: 480px) 120px
                       400px"
                src="originals/mozilladinosaur400.png" alt="Red head of the dinosaur">
          </a>
          <a href="https://addons.mozilla.org/">
-          <img srcset="firefoxaddons120.jpg 120w
-                       firefoxaddons400.jpg 400w"
+          <img srcset="originals/firefoxaddons120.jpg 120w,
+                       originals/firefoxaddons400.jpg 400w"
                sizes="(max-width:480px) 120px
                       400px"
                src="originals/firefoxaddons400.jpg" alt="Puzzle representing red panda running after its tale">
