--- a/index.html
+++ b/index.html
@@ -31,20 +31,17 @@
          <a href="https://www.mozilla.org/en-US/firefox/new/">
           <img srcset="originals/firefoxlogo120.png 120w,
                        originals/firefoxlogo400.png 400w"
-               sizes="(max-width: 480px) 120px 400px"
-               src="originals/firefoxlogo400.png" alt="Red panda running after its tale">
+               sizes="(max-width: 480px) 120px 400px">
          </a>
          <a href="https://www.mozilla.org/">
           <img srcset="originals/mozilladinosaur120.png 120w,
                        originals/mozilladinosaur400.png 400w"
-               sizes="(max-width: 480px) 120px 400px"
-               src="originals/mozilladinosaur400.png" alt="Red head of the dinosaur">
+               sizes="(max-width: 480px) 120px 400px">
          </a>
          <a href="https://addons.mozilla.org/">
           <img srcset="originals/firefoxaddons120.jpg 120w, 
                        originals/firefoxaddons400.jpg 400w"
-               sizes="(max-width:480px) 120px 400px"
-               src="originals/firefoxaddons400.jpg" alt="Puzzle representing red panda running after its tale">
+               sizes="(max-width:480px) 120px 400px">
          </a>
          <a href="https://developer.mozilla.org/en-US/">
           <img src="originals/mdn.svg"
